refactor: Authority controller 파라미터 변경 및 로직 수정(#85) (#86)
* refactor: authority 조회 기능 파라미터 변경 (#85)

- 컨트롤러 파라미터 변경
- 서비스 파라미터 변경
- 서비스 로직 변경

* refactor: authority 삭제 기능 파라미터 변경 (#85)

- 컨트롤러 파라미터 변경
- 서비스 파라미터 변경
- 서비스 로직 변경
- 레포지토리 함수 추가